fix footer dark mode colors

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,6 @@ h4 {
 .skip a{
     position: absolute;
     top: -40px;
-    color: var(--dark-blue);
     padding: 10px;
 }
 
@@ -229,8 +228,12 @@ footer p {
     padding-right: 20px;
 }
 
-.social-media a {
+.dark-mode .social-media a {
     color: var(--light-blue);
+}
+
+.social-media a {
+    color: white;
     font-size: 1.5em;
     padding-right: 10px;
     text-decoration: none;
